# FoxControl-Server

./: .gitignore  CMakeLists.txt  README.md
src/: gateway.cpp  gateway.hpp  imgui_utils.hpp  main.cpp  monitor.cpp  monitor.hpp  serial.hpp  server.cpp  server.hpp
src/glad/: gl.cpp
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp
